<resources>
    <string name="app_name">SCP Anywhere</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SCP Anywhere</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="last_url_offline">last_url_offline</string>
    <string name="last_url_online">last_url_online</string>
    <string name="start_url_offline">www.scpwiki.com/scp-999</string>
    <string name="start_url_online">www.scpwiki.com/scp-999</string>
    <string name="base_path">www.scpwiki.com</string>
    <string name="font_key">font</string>
    <string name="font_default">default</string>
    <string name="font_size_key">font_size</string>
    <string name="font_size_default">100%</string>
    <string name="theme_key">theme</string>
    <string name="storage_key">storage</string>
    <string name="theme_default">styles/css_style_light.css</string>
    <string name="font_size_template">styles/font_size_template.css</string>
    <string name="font_template">styles/font_template.css</string>
    <string name="github_repo">https://api.github.com/repos/tverona1/SCPAnywhere_Assets/releases/latest</string>
    <string name="github_repo_hash_file_name">hash_sha256.json</string>
    <string name="github_repo_ratings_asset">https://github.com/tverona1/SCPAnywhere_Ratings/releases/latest/download/ratinglist.json</string>
    <string name="scp_list_jsonfile">scplist.json</string>
    <string name="tale_list_jsonfile">talelist.json</string>
    <string name="is_scp_search">is_scp_search</string>
    <string name="menu_jsonfile">site_menu.json</string>
    <string name="tales_jsonfile">tales.json</string>
    <string name="local_url_prefix">https://appassets.androidplatform.net/</string>
    <string name="download">Download</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="delete">Delete</string>
    <string name="downloaded_data">Downloaded data</string>
    <string name="read_entries">Read Entries</string>
    <string name="favorites">Favorites</string>
    <string name="read">Read</string>
    <string name="favorite">Favorite</string>
    <string name="loading">Loading…</string>
    <string name="search_scp_list">Search SCPs</string>
    <string name="search_tale_list">Search Tales</string>
    <string name="offline_mode_key">connectivity</string>
    <string name="offline_mode_disabled">Offline mode disabled. Using online connectivity.</string>
    <string name="offline_mode_enabled">Offline mode enabled</string>
    <string name="error">Error</string>
    <string name="titleCancelChangingStorage">Cancel changing storage?</string>
    <string name="descCancelChangingStorage">Currently changing storage location. Are you sure you want to cancel this operation?</string>
    <string name="titleCancelDownlading">Cancel download?</string>
    <string name="descCancelDownloading">Currently downloading data. Are you sure you want to cancel this operation?</string>
    <string name="titleConfirmChangeStorage">Change storage location?</string>
    <string name="descConfirmChangeStorage">Downloaded data will be moved to the new location. Are you sure you want to proceed?</string>
    <string name="titleNotEnoughSpace">Not enough space</string>
    <string name="descNotEnoughSpace">There is not enough space remaining on this storage. Please change storage or free up space.</string>
    <string name="external_storage">External storage</string>
    <string name="internal_storage">Internal storage</string>
    <string name="free_space">Free Space</string>
    <string name="space_needed">Space Needed</string>
    <string name="next">Next</string>
    <string name="play">Read aloud</string>
    <string name="pause">Pause read aloud</string>
    <string name="connectivity_data_category"><![CDATA[Connectivity & Offline Data]]></string>
    <string name="style_category">Style</string>
    <string name="speech_category">Speech</string>
    <string name="speech_engine_key">speech_engine</string>
    <string name="storage_location">Storage Location</string>
    <string name="theme">Theme</string>
    <string name="font">Font</string>
    <string name="font_size">Font Size</string>
    <string name="speech_engine">Speech Engine</string>
    <string name="voice_key">voice</string>
    <string name="voice">Voice</string>
    <string name="pitch_key">pitch</string>
    <string name="pitch">Pitch</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="speech_rate_key">speech_rate</string>
    <string name="system_speech_settings">Open System Text-to-speech Settings</string>
    <string name="system_speech_settings_key">system_speech_settings</string>
    <string name="system_speech_settings_description">Change speech settings, install voice data, etc</string>
    <string name="voice_requires_network">Note: Requires network connection</string>
    <string name="speech_error_generic">Error initializing speech provider</string>
    <string name="speech_error_no_engines">No speech engines available</string>
    <string name="export_data">Export</string>
    <string name="export_data_key">export_data</string>
    <string name="export_data_description">Export your read and favorites lists</string>
    <string name="import_data">Import</string>
    <string name="import_data_key">import_data</string>
    <string name="import_data_description"><![CDATA[Import your read and favorite lists (merging with existing lists)]]></string>
    <string name="import_export_category"><![CDATA[Export & Import]]></string>
    <string name="document_storage">Document Storage</string>
    <string name="share">Share</string>
    <string name="select_import_file">Select file to import</string>
    <string name="no_file_manager">Please install a File Manager</string>
    <string name="scp_export_subject">SCP Export Data</string>
    <string name="imported_data">Imported data</string>
    <string name="failed_import_data">Failed to import data</string>
    <string name="share_url">Sharing SCP article</string>
    <string name="sort">Sort</string>
    <string name="sort_alphabetical">Sort alphabetically</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="sort_unread_first">Sort by unread first</string>
    <string name="offline_data">Offline Data</string>
    <string name="offline_data_key">offline_data</string>
    <string name="offline_data_description">Manage offline data</string>
    <string name="download_data">Download data</string>
    <string name="download_data_key">download_data</string>
    <string name="download_data_description"><![CDATA[Download data for offline mode & check for updates]]></string>
    <string name="offline_mode">Offline mode</string>
    <string name="random">Random</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="total_read_time">Total read time: %1$d hours, %2$d mins, %3$d secs</string>
    <string name="scp_read_stats"><![CDATA[SCP Articles Read: %1$d / %2$d (%3$.0f%%)]]></string>
    <string name="tales_read_stats"><![CDATA[Tales Read: %1$d / %2$d (%3$.0f%%)]]></string>
    <string name="base_css_theme">styles/css_style_base.css</string>
    <string name="rateLimitExceeded">Rate limit exceeded trying to download asset. Please try again later.</string>
    <string name="preference_screen_key">preference_screen</string>
    <string name="error_tts_settings">Error opening text-to-speech system settings</string>
    <string name="error_export_activity">Error trying to export document</string>
    <string name="error_share_activity">Error trying to share data</string>
    <string name="upgrade_stale_webview">Upgrade WebView</string>
    <string name="upgrade_stale_webview_title">Upgrade System WebView</string>
    <string name="upgrade_stale_webview_message">Your device is using a stale version of the System WebView, which does not render some pages correctly. Would you like to upgrade the System WebView via the Google Play Store?</string>
    <string name="upgrade_stale_webview_ignore">Ignore</string>
    <string name="upgrade_stale_webview_checked_key">upgrade_stale_webview_checked_key</string>
    <string name="about_page_description">SCP Anywhere - The entire contents of the <a href="http://www.scpwiki.com">SCP Foundation Wiki</a> at your fingertips. Read about anomalous and mysterious events, locations and beings from the SCP Foundation. Secure, Contain, Protect.</string>
    <string name="about_play_store_rate">Rate in-app now</string>
    <string name="about_play_store_visit">Visit us on the Play Store</string>
    <string name="about_github">Visit Github Page</string>
    <string name="about_image">About Image</string>
    <string name="about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="github_link">https://github.com/tverona1/SCPAnywhere</string>
    <string name="mark_unfavorite">Mark unfavorite</string>
    <string name="mark_favorite">Mark favorite</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mark_read">Mark read</string>
    <string name="descDeleteItem">Are you sure you want to delete this file?</string>
    <string name="titleDeleteItem">Delete %1$s?</string>
    <string name="export_name">Name of export file</string>
    <string name="export_name_hint">Export file name</string>
    <string name="reading_experience_category">Reading Experience</string>
    <string name="auto_mark_read_key">auto_mark_read_key</string>
    <string name="auto_mark_read">Auto mark as read</string>
    <string name="auto_mark_read_time_key">auto_mark_read_time_key</string>
    <string name="auto_mark_read_time">Minimum reading time</string>
    <string name="auto_mark_read_off">off</string>
    <string name="auto_mark_read_scroll_bottom">scroll_bottom</string>
    <string name="auto_mark_read_next_scp">next_scp</string>
    <string name="auto_mark_read_scroll_bottom_or_next_scp">scroll_bottom_or_next_scp</string>
    <string name="auto_mark_read_scroll_bottom_and_next_scp">scroll_bottom_and_next_scp</string>
    <string name="auto_mark_read_category">Auto Mark As Read</string>
    <string name="content_options_category">Content Options</string>
    <string name="expand_tabs_description">If enabled, expand all tabs and displays them in sequence</string>
    <string name="expand_tabs">Expand Tabs</string>
    <string name="expand_tabs_key">expand_tabs_key</string>
    <string name="expand_blocks">Expand Blocks</string>
    <string name="expand_blocks_key">expand_blocks_key</string>
    <string name="expand_blocks_description">If enabled, expands all collapsed blocks</string>
    <string name="download_channel_name">Download Progress</string>
    <string name="download_channel_description">Show download progress</string>
    <string name="download_notification_title"><![CDATA[Downloading %1$d/%2$d files (%3$s/%4$s - %5$d%%)]]></string>
    <string name="cancel_download">Cancel Download</string>
    <string name="changestorage_channel_name">Change Storage Location</string>
    <string name="changestorage_channel_description">Show change storage location progress</string>
    <string name="changestorage_notification_title"><![CDATA[Changing storage - moving file %1$s (%2$d/%3$d)]]></string>
    <string name="cancel_changestorage">Cancel change storage</string>
    <string name="speechprovider_channel_name">Text-to-Speech</string>
    <string name="speechprovider_channel_description">Show Text-to-Speech notification</string>
    <string name="speechprovider_notification_title">Reading aloud \"%1$s\"</string>
    <string name="download_release_status">Latest release: %1$s</string>
</resources>