<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/random"
        android:orderInCategory="100"
        android:title="@string/random" />

    <item
        android:id="@+id/search_scp_list"
        android:orderInCategory="100"
        android:title="@string/search_scp_list" />

    <item
        android:id="@+id/search_tale_list"
        android:orderInCategory="100"
        android:title="@string/search_tale_list" />

    <item
        android:id="@+id/read_list"
        android:orderInCategory="100"
        android:title="@string/read_entries" />

    <item
        android:id="@+id/favorites_list"
        android:orderInCategory="100"
        android:title="@string/favorites" />

    <item
        android:id="@+id/stats"
        android:orderInCategory="100"
        android:title="@string/stats" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
</menu>